compiler/testData/diagnostics/quick/backingField/WriteNonexistentDeclaredInHigher.jet
val y = 1

class A() {
    {
        <!UNRESOLVED_REFERENCE!>$y<!> = 1
    }
}
